fixed links, simplify install command

--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@ layout: default
             <pre><code>
               wget -N https://raw.githubusercontent.com/owtf/bootstrap-script/master/bootstrap.sh
 
-              chmod +x bootstrap.sh
-
-              ./bootstrap.sh
+              bash bootstrap.sh
             </code></pre>
 
             <h4 align="center"> or </h4>
