--- a/download.html
+++ b/download.html
@@ -1,8 +1,8 @@
       <!DOCTYPE html>
       <meta charset=utf-8>
       <title>Redirecting...</title>
-      <link rel=canonical href="/download/index.html">
-      <meta http-equiv=refresh content="0; url=/download/index.html">
+      <link rel=canonical href="/#download">
+      <meta http-equiv=refresh content="0; url=/#download">
       <h1>Redirecting...</h1>
-      <a href="/download/index.html">Click here if you are not redirected.</a>
-      <script>location='/download/index.html'</script>
+      <a href="/#download">Click here if you are not redirected.</a>
+      <script>location='/#download'</script>
