new release out in the wild

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ layout: default
       <div class='row'><hr>
         <div class='ten columns offset-by-one'>
           <h3>Screenshots</h3>
-          <blockquote class="imgur-embed-pub" lang="en" data-id="a/ISOb9"><a href="//imgur.com/a/ISOb9">OWTF 1.0.1 screenshots</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+          <blockquote class="imgur-embed-pub" lang="en" data-id="a/ISOb9"><a href="//imgur.com/a/ISOb9">OWTF screenshots</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         </div>
       </div>
     </div>
