--- a/online-passive-scanner/index.html
+++ b/online-passive-scanner/index.html
@@ -1,175 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="OWASP OWTF Summary Report" />
-    <meta name="author" content="OWASP OWTF Team" />
-    <title>OWASP OWTF Summary Report</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <style>
-      body {
-        background-color: #f5f7fa;
-        min-height: 100vh;
-        position: relative;
-      }
+---
+layout: default
+title: "OWTF Online Passive Scanner"
+description: "Run OWTF passive URL and DNS reconnaissance checks from a modern Tailwind interface."
+---
+<div class="pointer-events-none absolute inset-x-0 top-0 -z-10 h-[420px] bg-gradient-to-b from-slate-100 via-white to-white"></div>
+<div class="relative flex min-h-screen flex-col">
+  {% include header.html %}
+  <main class="space-y-32 pb-16">
+    <section class="section-container pb-24 pt-24">
+      <div class="max-w-3xl space-y-6">
+        <p class="text-xs font-semibold uppercase tracking-[0.4em] text-slate-500">Online passive scanner</p>
+        <h1 class="text-4xl font-semibold tracking-tight text-slate-900 sm:text-5xl">Quick passive reconnaissance for web targets</h1>
+        <p class="text-lg leading-relaxed text-slate-600">This scanner reviews a target URL and its DNS posture for externally visible risk indicators. It is passive-only and does not run exploit payloads against the target.</p>
+      </div>
 
-      .github-ribbon {
-        position: fixed;
-        top: 1rem;
-        right: -3.5rem;
-        display: block;
-        width: 12rem;
-        padding: 0.75rem 0;
-        background: linear-gradient(135deg, #1f2328, #24292f);
-        color: #f8fbff;
-        text-align: center;
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 0.9rem;
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-        transform: rotate(45deg);
-        transform-origin: top right;
-        box-shadow: 0 6px 12px rgba(15, 23, 42, 0.35);
-        z-index: 1000;
-      }
-
-      .github-ribbon:focus-visible {
-        outline: 2px solid #f0f6ff;
-        outline-offset: 2px;
-      }
-
-      @media (max-width: 576px) {
-        .github-ribbon {
-          width: 10rem;
-          right: -3rem;
-          font-size: 0.75rem;
-        }
-      }
-
-      .page-header img {
-        max-width: 150px;
-      }
-
-      .page-header h1 {
-        font-size: 2rem;
-        margin-bottom: 0;
-      }
-
-      #targetbar h2 {
-        font-weight: 600;
-      }
-
-      .error-message {
-        display: none;
-      }
-    </style>
-    <script>
-      const isGithubPages =
-        window.location.hostname === "owtf.github.io" &&
-        window.location.pathname.startsWith("/online-passive-scanner");
-
-      if (isGithubPages && window.location.protocol === "http:") {
-        const { host, pathname, search, hash } = window.location;
-        window.location.replace(`https://${host}${pathname}${search}${hash}`);
-      }
-    </script>
-  </head>
-  <body>
-    <div class="container py-5">
-      <a
-        href="https://github.com/owtf/online-passive-scanner"
-        aria-label="Fork me on GitHub"
-        class="github-ribbon"
-      >
-        Fork me on GitHub
-      </a>
-      <header class="page-header row align-items-center g-4 mb-5">
-        <div class="col-md-3 text-center text-md-start">
-          <a href="https://owasp.org/www-project-owtf/">
-            <img
-              src="images/owtf-logo.svg"
-              class="img-fluid rounded"
-              alt="OWASP OWTF Logo"
-              width="150"
-              height="150"
-            />
-          </a>
+      <div class="mt-12 rounded-3xl border border-slate-200 bg-white p-8 shadow-card">
+        <label for="target-url" class="text-sm font-semibold text-slate-900">Target URL</label>
+        <input id="target-url" type="url" placeholder="https://www.example.com" class="mt-3 block rounded-2xl border border-slate-200 bg-white p-5 text-sm text-slate-900" style="width:100%" autocomplete="url" />
+        <p id="scan-error" class="mt-2 text-sm text-slate-600" style="display:none"></p>
+        <div class="mt-6 flex flex-col gap-4 sm:flex-row sm:items-center">
+          <button id="open-report" class="inline-flex items-center justify-center gap-2 rounded-full bg-slate-900 px-6 py-3 text-sm font-semibold text-white transition hover:bg-slate-700">Run passive scan<span class="text-lg leading-none">&rarr;</span></button>
+          <a href="https://github.com/owtf/online-passive-scanner" class="inline-flex items-center justify-center gap-2 rounded-full border border-slate-200 px-6 py-3 text-sm font-semibold text-slate-700 transition hover:border-slate-300 hover:text-slate-900">Scanner source</a>
         </div>
-        <div class="col-md-9">
-          <h1 class="fw-semibold">Online Passive Scanner</h1>
-          <p class="text-muted mb-0">
-            Version 1.0.1 · Release <strong>Lionheart</strong>
-            <span class="visually-hidden" id="seed">2NfaMaxkF_</span>
-          </p>
-        </div>
-      </header>
-      <section id="targetbar" class="row mb-4">
-        <div class="col">
-          <h2 class="h4">Enter the target URL</h2>
-          <p class="text-muted">
-            Paste the URL you would like to review. We will generate a passive report using the
-            bundled sample data.
-          </p>
-        </div>
-      </section>
-      <form class="row gy-3" novalidate>
-        <div class="col-lg-8">
-          <label class="form-label" for="q">Target URL</label>
-          <input
-            type="url"
-            id="q"
-            name="q"
-            class="form-control form-control-lg"
-            placeholder="https://www.example.com"
-            autocomplete="url"
-            required
-          />
-          <p id="error" class="error-message text-danger mt-2" role="alert"></p>
-        </div>
-        <div class="col-lg-4 d-flex align-items-end">
-          <button type="submit" class="btn btn-primary btn-lg w-100" id="submit">Generate report</button>
-        </div>
-      </form>
-      <footer id="footer" class="mt-5 text-muted">
-        Built during GSoC 2014 by the <a href="https://owtf.github.io/">OWTF team</a>.
-      </footer>
-    </div>
-    <script>
-      const form = document.querySelector("form");
-      const input = document.getElementById("q");
-      const errorMessage = document.getElementById("error");
+      </div>
 
-      form.addEventListener("submit", (event) => {
+      <div class="mt-8 grid gap-4 md:grid-cols-3">
+        <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-inset">
+          <p class="text-sm font-semibold text-slate-900">URL posture checks</p>
+          <p class="mt-2 text-sm text-slate-600">Flags insecure schemes, exposed credentials, risky parameters, and suspicious route patterns.</p>
+        </div>
+        <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-inset">
+          <p class="text-sm font-semibold text-slate-900">DNS posture checks</p>
+          <p class="mt-2 text-sm text-slate-600">Queries A, AAAA, CAA, MX, NS, and TXT records through DNS-over-HTTPS for baseline exposure signals.</p>
+        </div>
+        <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-inset">
+          <p class="text-sm font-semibold text-slate-900">Shareable report URLs</p>
+          <p class="mt-2 text-sm text-slate-600">Each report can be reopened by sharing a link with the encoded `#q=` target value.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  {% include footer.html %}
+</div>
+
+<script>
+  (function () {
+    var input = document.getElementById('target-url');
+    var button = document.getElementById('open-report');
+    var error = document.getElementById('scan-error');
+    var reportPath = "{{ '/online-passive-scanner/report.html' | relative_url }}";
+
+    function setError(message) {
+      if (!message) {
+        error.style.display = 'none';
+        error.textContent = '';
+        return;
+      }
+      error.style.display = 'block';
+      error.textContent = message;
+    }
+
+    function openReport() {
+      setError('');
+      var value = (input.value || '').trim();
+      if (!value) {
+        setError('Please enter a URL to continue.');
+        input.focus();
+        return;
+      }
+
+      try {
+        var parsed = new URL(value);
+        window.location.assign(reportPath + '#q=' + encodeURIComponent(parsed.href));
+      } catch (err) {
+        setError('The value provided is not a valid URL.');
+        input.focus();
+      }
+    }
+
+    button.addEventListener('click', openReport);
+    input.addEventListener('keydown', function (event) {
+      if (event.key === 'Enter') {
         event.preventDefault();
-        errorMessage.style.display = "none";
-        errorMessage.textContent = "";
-
-        const value = input.value.trim();
-        if (!value) {
-          errorMessage.textContent = "Please enter a URL to continue.";
-          errorMessage.style.display = "block";
-          input.focus();
-          return;
-        }
-
-        try {
-          const parsed = new URL(value);
-          const destination = new URL("report.html", window.location.href);
-          destination.hash = `q=${encodeURIComponent(parsed.href)}`;
-          window.location.assign(destination.toString());
-        } catch (error) {
-          errorMessage.textContent = "The value provided is not a valid URL. Please check and try again.";
-          errorMessage.style.display = "block";
-          input.focus();
-        }
-      });
-    </script>
-  </body>
-</html>
+        openReport();
+      }
+    });
+  })();
+</script>
