--- a/passive-scanner/report/index.html
+++ b/passive-scanner/report/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "OWTF Passive Scanner Report"
-description: "Review passive scan findings in a modern report interface."
+description: "Compatibility route for OWTF passive scanner report."
 ---
 <div class="pointer-events-none absolute inset-x-0 top-0 -z-10 h-[420px] bg-gradient-to-b from-slate-100 via-white to-white"></div>
 <div class="relative flex min-h-screen flex-col">
@@ -10,33 +10,9 @@ description: "Review passive scan findings in a modern report interface."
     <section class="section-container pb-24 pt-24">
       <div class="max-w-3xl space-y-6">
         <p class="text-xs font-semibold uppercase tracking-[0.4em] text-slate-500">Passive scanner report</p>
-        <h1 class="text-4xl font-semibold tracking-tight text-slate-900 sm:text-5xl">Target Findings</h1>
-        <p class="text-lg leading-relaxed text-slate-600">This report highlights externally visible signals that can indicate weak security posture, such as risky headers, information disclosure, and client-side findings.</p>
-      </div>
-
-      <div class="mt-12 rounded-3xl border border-slate-200 bg-white p-8 shadow-card">
-        <div class="grid gap-6 md:grid-cols-3">
-          <div class="rounded-2xl border border-slate-200 bg-slate-50 p-6 text-sm text-slate-600 md:col-span-2">
-            <p class="text-xs font-semibold uppercase tracking-[0.35em] text-slate-500">Target</p>
-            <p id="report-target" class="mt-3 break-words text-sm font-semibold text-slate-900">No target selected.</p>
-            <p class="mt-2 text-sm text-slate-600">Enter a URL and reopen the report if you need to switch targets.</p>
-          </div>
-          <div class="rounded-2xl border border-slate-200 bg-slate-50 p-6 text-sm text-slate-600">
-            <p class="text-xs font-semibold uppercase tracking-[0.35em] text-slate-500">Actions</p>
-            <div class="mt-3 flex flex-col gap-3">
-              <a id="open-classic" href="/online-passive-scanner/report-legacy.html" class="inline-flex items-center justify-center rounded-full border border-slate-200 px-4 py-2 text-xs font-semibold text-slate-700 transition hover:border-slate-300 hover:text-slate-900">Open classic report</a>
-              <a href="/passive-scanner/" class="inline-flex items-center justify-center rounded-full bg-slate-900 px-4 py-2 text-xs font-semibold text-white transition hover:bg-slate-700">Scan another URL</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="mt-8 rounded-3xl border border-slate-200 bg-white p-6 shadow-card">
-        <div class="flex items-center justify-between">
-          <h2 class="text-xl font-semibold text-slate-900">Report View</h2>
-          <p class="text-xs uppercase tracking-[0.35em] text-slate-500">Embedded legacy engine</p>
-        </div>
-        <iframe id="legacy-report-frame" title="OWTF passive scanner report" class="mt-4 block rounded-2xl border border-slate-200 bg-white" style="width:100%;min-height:980px"></iframe>
+        <h1 class="text-4xl font-semibold tracking-tight text-slate-900 sm:text-5xl">Moved to the online scanner report route</h1>
+        <p class="text-lg leading-relaxed text-slate-600">This route is preserved for compatibility. You are being redirected to `/online-passive-scanner/report.html`.</p>
+        <a id="open-report-link" href="/online-passive-scanner/report.html" class="inline-flex items-center gap-2 rounded-full bg-slate-900 px-6 py-3 text-sm font-semibold text-white transition hover:bg-slate-700">Open report<span class="text-lg leading-none">&rarr;</span></a>
       </div>
     </section>
   </main>
@@ -44,52 +20,9 @@ description: "Review passive scan findings in a modern report interface."
 </div>
 <script>
   (function () {
-    var frame = document.getElementById('legacy-report-frame');
-    var openClassic = document.getElementById('open-classic');
-    var reportTarget = document.getElementById('report-target');
-
-    function readTarget() {
-      var hash = window.location.hash || '';
-      var match = hash.match(/(?:^#|&)q=([^&]+)/);
-      if (!match) {
-        return '';
-      }
-      try {
-        return decodeURIComponent(match[1]);
-      } catch (err) {
-        return '';
-      }
-    }
-
-    function loadReport() {
-      var target = readTarget();
-      if (!target) {
-        reportTarget.textContent = 'No target selected.';
-        frame.src = '/online-passive-scanner/report-legacy.html';
-        openClassic.href = '/online-passive-scanner/report-legacy.html';
-        return;
-      }
-
-      reportTarget.textContent = target;
-      var encoded = encodeURIComponent(target);
-      var reportUrl = '/online-passive-scanner/report-legacy.html#q=' + encoded;
-      frame.src = reportUrl;
-      openClassic.href = reportUrl;
-    }
-
-    frame.addEventListener('load', function () {
-      try {
-        var doc = frame.contentDocument;
-        if (!doc) {
-          return;
-        }
-        var style = doc.createElement('style');
-        style.textContent = '.github-ribbon,.page-header,.nav,.navbar,#footer{display:none !important;} body{padding-top:0 !important;background:#fff !important;} .container{width:100% !important;max-width:none !important;}';
-        doc.head.appendChild(style);
-      } catch (err) {
-      }
-    });
-
-    loadReport();
+    var target = '/online-passive-scanner/report.html';
+    var hash = window.location.hash || '';
+    document.getElementById('open-report-link').href = target + hash;
+    window.location.replace(target + hash);
   })();
 </script>
